# LPTM_ROS

./: .gitignore  CMakeLists.txt  README.md  detect.py  package.xml  train.py
data/: data_utils.py  dataset_LPTM.py
msg/: coords_weights.msg  image_coords.msg
phase_correlation/: phase_corr.py
src/: gym_init.txt  qsdjy_init.txt
src/image_mcl/: CMakeLists.txt  package.xml
src/image_mcl/config/: caoguangbiao.yaml
src/image_mcl/mcl/: mcl_node.cpp
src/image_mcl/mcl/src/: CMakeLists.txt  mcl.cpp  mcl.h
src/image_mcl/msg/: image_coords.msg
src/image_mcl/tool/: tool.cpp  tool.h
src/lptm_ros/: CMakeLists.txt  detect.py  testttttttt.py  trainLPTM.py  validate.py
src/lptm_ros/data/: data_utils.py  dataset.py  simulation.py
src/lptm_ros/phase_correlation/: phase_corr.py
src/lptm_ros/srv/: ComputePtWeights.srv
src/lptm_ros/unet/: pytorch_lptm.py
src/lptm_ros/utils/: detect_utils.py  utils.py  validate_utils.py
unet/: pytorch_lptm.py
utils/: detect_utils.py  train_utils.py  utils.py
