<?xml version="1.0"?>
<package>
  <name>lptm_ros</name>
  <version>0.0.0</version>
  <description>The lptm_ros package</description>

  <maintainer email="peterxu9710@outlook.com">Peter XU</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

  <build_depend>nav_msgs</build_depend>
  <run_depend>nav_msgs</run_depend>

  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>

<build_depend>eigen</build_depend>

</package>
